Movies and Actors APIs added
