# models/__init__.py
@@ -22,6 +22,10 @@ def setup_db(app, database_path=database_path):
     db.init_app(app)
     db.create_all()
 
+def db_drop_and_create_all():
+    db.drop_all()
+    db.create_all()
+
 '''
   Define Many to Many relationship between movies and actors table
 '''
@@ -30,12 +34,27 @@ castings = db.Table('castings',
   db.Column('actor_id', db.Integer, db.ForeignKey('actors.id'), primary_key=True)
 )
 
-class Movie(db.Model):
+class BaseModel:
+  pass
+
+  def insert(self):
+      db.session.add(self)
+      db.session.commit()
+
+  def update(self):
+      db.session.commit()
+
+  def delete(self):
+      db.session.delete(self)
+      db.session.commit()
+
+class Movie(db.Model, BaseModel):
+  pass
   __tablename__ = "movies"
 
   id = db.Column(db.Integer, primary_key=True)
   title = db.Column(db.String, nullable=False)
-  release_date = db.Column(db.DateTime, nullable=True)
+  release_date = db.Column(db.Float, nullable=True)
 
   # relationships
   performing_actors = db.relationship("Actor", secondary=castings, lazy='subquery', backref=db.backref("movies", lazy=True))
@@ -44,7 +63,7 @@ class Movie(db.Model):
     return {
       "id": self.id,
       "title": self.title,
-      "release_date": self.release_date.strftime('%m/%d/%Y, %H:%M:%S')
+      "release_date": self.release_date
     }
 
   def serialize_with_actors(self):
@@ -52,23 +71,21 @@ class Movie(db.Model):
     return {
       "id": self.id,
       "title": self.title,
-      "release_date": self.release_date.strftime('%m/%d/%Y, %H:%M:%S'),
+      "release_date": self.release_date,
       "actors": [
         actor.serialize() for actor in actors
       ]
     }
 
-  def insert(self):
-      db.session.add(self)
-      db.session.commit()
+class Actor(db.Model, BaseModel):
+  pass
 
-class Actor(db.Model):
   __tablename__ = "actors"
 
   id = db.Column(db.Integer, primary_key=True)
   name = db.Column(db.String, nullable=False)
   age = db.Column(db.Integer)
-  gender = db.Column(db.String)
+  gender = db.Column(db.String, default='U')
 
   def serialize(self):
     return {
@@ -79,14 +96,13 @@ class Actor(db.Model):
     }
 
   def serialize_with_movies(self):
-    movies = Movie.query.filter(Movie.performing_actors.any(id=self.id)).all()
     return {
       "id": self.id,
       "name": self.name,
       "age": self.age,
       "gender": self.gender,
       "movies": [
-        movie.serialize() for movie in movies
+        movie.serialize() for movie in self.movies
       ]
     }
 
